--- a/PID ITS - Giorgio Alberto/configs/config.yml
+++ b/PID ITS - Giorgio Alberto/configs/config.yml
@@ -18,16 +18,14 @@ data_prep:
 
     test_frac: 0.2
     seed_split: 0   # random_state for train_test_split
-
-    do_plots: False
  
 
     # Data Augmentation
     #____________________________________
     do_augm: True
-    to_augm: ["K"]
-    mothers: ["Pi"]
-    p_ranges: [(0., 1.2)]
+    to_augm: ["K", "K", "Deu"]
+    mothers: ["Pi", "P", "P"]
+    p_ranges: [(0., 0.4), (0.4, 1.0), (0.4, 1.0)]
 
     # Beta Flat
     #____________________________________
@@ -66,8 +64,18 @@ training:
 
     model: "xgboost"
     do_opt: False
+    early_stop: True
     beta_flat: True
-    save_model: True
+    save_model: False
 
+plots:
+    do_plots: True
+    plot_spec_hist: {"meanClsize": [100, 0, 100], "meanPattID": [100, 0, 100], "ClSizeL0": [100, 0, 100], "ClSizeL1": [100, 0, 100], "ClSizeL2": [100, 0, 100], 
+                    "ClSizeL3": [100, 0, 100], "ClSizeL4": [100, 0, 100], "ClSizeL5": [100, 0, 100], "ClSizeL6": [100, 0, 100],
+
+                    "SnPhiL0": [100, -1, 1], "SnPhiL1": [100, -1, 1], "SnPhiL2": [100, -1, 1], "SnPhiL3": [100, -1, 1], "SnPhiL4": [100, -1, 1], "SnPhiL5": [100, -1, 1], "SnPhiL6": [100, -1, 1], "meanSnPhi": [100, -1, 1],  
+
+                    "L6_L0": [100, 0, 10], "p": [100, 0, 2], "tgL": [100, -10, 10]}     # dict (variable_to_plot, hist_settings) 
+    plot_spec_scat: {"dedx": ["p", "#frac{dE}{dx}", 1200, 0, 1.2, 600, 0, 600], "beta": ["p", "#beta", 1200, 0, 1.2, 1000, 0, 1]}  
     
     
