--- a/PID ITS - Giorgio Alberto/configs/config.yml
+++ b/PID ITS - Giorgio Alberto/configs/config.yml
@@ -2,7 +2,11 @@
 
 input:
 
-    data: /Users/giogi/Desktop/Stage INFN/PID ITS/data/Df_filtered_ITS2Cluster505673.parquet.gzip
+    data: /Users/giogi/Desktop/Stage INFN/PID ITS/data/V0/particles_pid_520143.parquet
+    appl_data: /Users/giogi/Desktop/Stage INFN/PID ITS/data/V0/particles_pid_520147.parquet
+    ext_appl: True
+
+    isV0: True
 
 
 
@@ -13,43 +17,45 @@ output:
 
     save_data_dir: /Users/giogi/Desktop/Stage INFN/PID ITS/data
 
+    particle:   { 1: "p", 2: "K", 3: "pi", 4: "e"}
+
 
 data_prep:
+
     skip_data_prep: False
-    prep_data: [/Users/giogi/Desktop/Stage INFN/PID ITS/data/TrainSet.parquet.gzip,
-                /Users/giogi/Desktop/Stage INFN/PID ITS/data/yTrain.parquet.gzip,
-                /Users/giogi/Desktop/Stage INFN/PID ITS/data/TestSet.parquet.gzip,
-                /Users/giogi/Desktop/Stage INFN/PID ITS/data/yTest.parquet.gzip]
-    appl_data:  /Users/giogi/Desktop/Stage INFN/PID ITS/data/ApplicationDf.parquet.gzip
+    prep_data: [/Users/giogi/Desktop/Stage INFN/PID ITS/data/TrainSet_betaflat.parquet.gzip,
+                /Users/giogi/Desktop/Stage INFN/PID ITS/data/yTrain_betaflat.parquet.gzip,
+                /Users/giogi/Desktop/Stage INFN/PID ITS/data/TestSet_betaflat.parquet.gzip,
+                /Users/giogi/Desktop/Stage INFN/PID ITS/data/yTest_betaflat.parquet.gzip]
+    appl_data:  /Users/giogi/Desktop/Stage INFN/PID ITS/data/ApplicationDf_betaflat.parquet.gzip
     save_data: True
 
     test_frac: 0.2
     seed_split: 0   # random_state for train_test_split
  
+    # Equal
+    #___________________________________
+    do_equal: False
+
 
     # Data Augmentation
     #____________________________________
-    do_augm: False
-    to_augm: ["P", "K", "Deu"]
-    mothers: ["Pi", "Pi", "Pi"]
-    p_ranges: [[0.1, 0.2], [0.1, 0.2], [0.1, 0.2]]
+    do_augm: True
+    to_augm: ["K", "p"]
+    mothers: ["pi", "K"]
+    p_ranges: [[0.15, 0.7], [0.4, 0.6]]
 
     # Beta Flat
     #____________________________________
-    betamins: [0., 0.2, 0.4, 0.6, 0.8]
-    betamaxs: [0.2, 0.4, 0.6, 0.8, 1.0]
+    betamins: [0.2, 0.4, 0.6, 0.8]
+    betamaxs: [0.4, 0.6, 0.8, 1.0]
 
 training:
 
     skip_training: False
 
-    RegressionColumns: ["p", "pt", "tgL", "meanClsize", "meanSnPhi", "meanPattID", "dedx", "nSigmaDeu", "nSigmaP",
-                        "nSigmaK", "nSigmaPi", "tpcITSchi2", "ClSizeL0", "SnPhiL0", "TanLamL0",
-                        "PattIDL0", "ClSizeL1", "SnPhiL1", "TanLamL1", "PattIDL1", "ClSizeL2",
-                        "SnPhiL2", "TanLamL2", "PattIDL2", "ClSizeL3", "SnPhiL3", "TanLamL3",
-                        "PattIDL3", "ClSizeL4", "SnPhiL4", "TanLamL4", "PattIDL4", "ClSizeL5",
-                        "SnPhiL5", "TanLamL5", "PattIDL5", "ClSizeL6", "SnPhiL6", "TanLamL6",
-                        "PattIDL6", "L6_L0"]
+    RegressionColumns: ["p", "tgL", "meanClsize", "meanSnPhi", "meanPattID", "clSizeCosLam",
+                        "ClSizeL0", "ClSizeL1", "ClSizeL2", "ClSizeL3", "ClSizeL4", "ClSizeL5", "ClSizeL6"]
     ModelParams:        {"n_jobs": 100,
                         "time_budget": 100,
                         "metric": "r2",
@@ -69,33 +75,39 @@ training:
                         "reg_lambda": 0.5031161568154017, # not available in FLAML
                         "verbosity": 1,
                         } # dict of hyperparameters (XGB and AUTOML USE DIFFERENT HYPER-PARS!)
-    HyperParamsRange:   {"max_depth": !!python/tuple [3, 8], 
+    HyperParamsRange:   {"max_depth": !!python/tuple [8, 18], 
                         "learning_rate": !!python/tuple [0.01, 0.1],
                         "n_estimators": !!python/tuple [300, 1500], 
                         "min_child_weight":!!python/tuple [1, 10],
                         "subsample": !!python/tuple [0.8, 1.], 
                         "colsample_bytree": !!python/tuple [0.8, 1]}    # dict of ranges for the hyperparameters evaluated by optuna
 
-    model: "xgboost"
+    model: "xgboost"        # accepted models: xgboost, automl
     do_opt: True
     early_stop: False
-    beta_flat: True
+    beta_flat: False
     save_model: True
 
 application:
-    model_loc: /Users/giogi/Desktop/Stage INFN/PID ITS/ML_output/RegressorModel_xgboost.pickle
+    model_loc: /Users/giogi/Desktop/Stage INFN/PID ITS/ML_output/RegressorModel_xgboost_betaflat_.pickle
 
 plots:
-    do_plots: False
-    plot_spec_hist: {"meanClsize": [100, 0, 10], "meanPattID": [10, 0, 100], "ClSizeL0": [10, 0, 10], "ClSizeL1": [10, 0, 10], "ClSizeL2": [10, 0, 10], 
-                    "ClSizeL3": [10, 0, 10], "ClSizeL4": [10, 0, 10], "ClSizeL5": [10, 0, 10], "ClSizeL6": [10, 0, 10],
+    do_plots: True
+    vars_to_plot:   ["ClSizeL0", "ClSizeL1", "ClSizeL2", "ClSizeL3", "ClSizeL4", "ClSizeL5", "ClSizeL6", "meanClsize",
+                    "meanSnPhi", "tgL", "meanPattID", "p", "clSizeCosLam"]
 
-                    "SnPhiL0": [100, -1, 1], "SnPhiL1": [100, -1, 1], "SnPhiL2": [100, -1, 1], "SnPhiL3": [100, -1, 1], "SnPhiL4": [100, -1, 1], "SnPhiL5": [100, -1, 1], "SnPhiL6": [100, -1, 1], "meanSnPhi": [100, -1, 1],  
-
-                    "L6_L0": [100, 0, 10], "p": [100, 0, 2], "tgL": [100, -10, 10]}     # dict (variable_to_plot, hist_settings) 
+    plot_spec_hist: {"ClSizeL0": [10, 0, 10], "ClSizeL1": [10, 0, 10], "ClSizeL2": [10, 0, 10], "ClSizeL3": [10, 0, 10], 
+                    "ClSizeL4": [10, 0, 10], "ClSizeL5": [10, 0, 10], "ClSizeL6": [10, 0, 10], "meanClsize": [100, 0, 10],
+                    "SnPhiL0": [100, -1, 1], "SnPhiL1": [100, -1, 1], "SnPhiL2": [100, -1, 1], "SnPhiL3": [100, -1, 1], 
+                    "SnPhiL4": [100, -1, 1], "SnPhiL5": [100, -1, 1], "SnPhiL6": [100, -1, 1], "meanSnPhi": [100, -1, 1], 
+                    "TanLamL0": [100, -10, 10], "TanLamL1": [100, -10, 10], "TanLamL2": [100, -10, 10], "TanLamL3": [100, -10, 10], 
+                    "TanLamL4": [100, -10, 10], "TanLamL5": [100, -10, 10], "TanLamL6": [100, -10, 10], "tgL": [100, -10, 10],
+                    "PattIDL0": [10, 0, 100], "PattIDL1": [10, 0, 100], "PattIDL2": [10, 0, 100], "PattIDL3": [10, 0, 100], 
+                    "PattIDL4": [10, 0, 100], "PattIDL5": [10, 0, 100], "PattIDL6": [10, 0, 100], "meanPattID": [10, 0, 100],
+                    "L6_L0": [100, 0, 10], "p": [100, 0, 2]}     # dict (variable_to_plot, hist_settings) 
     
     plot_x_scat:    ["p", "p", "p", "beta"]
     plot_y_scat:    ["dedx", "beta", "meanClsize", "meanClsize"]
-    plot_spec_scat: [["p", "#frac{dE}{dx}", 1200, 0, 1.2, 600, 0, 600], ["p", "#beta", 1200, 0, 1.2, 1000, 0, 1], ["p", "meanClsize", 1200, 0, 1.2, 10, 0, 10], ["#beta", "meanClsize", 10, 0, 1, 10, 0, 10]]  
+    plot_spec_scat: [["p", "#frac{dE}{dx}", 1200, 0, 1.2, 600, 0, 600], ["p", "#beta", 1200, 0, 1.2, 1000, 0, 1], ["p", "meanClsize", 1200, 0, 1.2, 10, 0, 10], ["#beta", "meanClsize", 10, 0, 1, 10, 0, 20]]  
     
     
