--- a/PID ITS - Giorgio Alberto/configs/config.yml
+++ b/PID ITS - Giorgio Alberto/configs/config.yml
@@ -2,8 +2,8 @@
 
 input:
 
-    data: /data/shared/ITS/ML/particles_pid_520143.parquet
-    appl_data: /data/shared/ITS/ML/particles_pid_520143_itstpc.parquet
+    data:       /data/shared/ITS/ML/particles_pid_520143.parquet
+    appl_data:  /data/shared/ITS/ML/particles_pid_520147_itstpc.parquet
     ext_appl: True
 
     isV0: True
@@ -11,11 +11,11 @@ input:
 
 
 output:
-    data_visual_dir: /Users/giogi/Desktop/Stage INFN/PID ITS/data_visual_root
-    ml_dir: /Users/giogi/Desktop/Stage INFN/PID ITS/ML_output
-    final_dir: /Users/giogi/Desktop/Stage INFN/PID ITS/final_plots
+    data_visual_dir: ../../../data_visual_root
+    ml_dir:  ../../../ML_output
+    final_dir:  ../../../final_plots
 
-    save_data_dir: /Users/giogi/Desktop/Stage INFN/PID ITS/data
+    save_data_dir: ../../../data
 
     particle:   { 1: "p", 2: "K", 3: "pi", 4: "e"}
 
@@ -56,13 +56,13 @@ training:
 
     RegressionColumns: ["p", "tgL", "meanClsize", "meanSnPhi", "meanPattID", "clSizeCosLam",
                         "ClSizeL0", "ClSizeL1", "ClSizeL2", "ClSizeL3", "ClSizeL4", "ClSizeL5", "ClSizeL6"]
-    ModelParams:        {"n_jobs": 100,
-                        "time_budget": 100,
-                        "metric": "r2",
-                        "task": "regression",
-                        "log_file_name": "bdt.log",
+    ModelParams:        {"n_jobs": 40,
+                        #"time_budget": 100,
+                        #"metric": "r2",
+                        #"task": "regression",
+                        #"log_file_name": "bdt.log",
                         "tree_method": "hist", # not available in FLAML
-                        "estimator_list" : ["xgboost"], # not available in FLAML
+                        #"estimator_list" : ["xgboost"], # not available in FLAML
                         "colsample_bylevel": 0.6337942873486531, # not available in FLAML 
                         "colsample_bytree": 0.7, # not available in FLAML
                         "subsample": 0.710841077866278, # not available in FLAML
@@ -75,12 +75,14 @@ training:
                         "reg_lambda": 0.5031161568154017, # not available in FLAML
                         "verbosity": 1,
                         } # dict of hyperparameters (XGB and AUTOML USE DIFFERENT HYPER-PARS!)
-    HyperParamsRange:   {"max_depth": !!python/tuple [8, 18], 
-                        "learning_rate": !!python/tuple [0.01, 0.1],
-                        "n_estimators": !!python/tuple [300, 1500], 
-                        "min_child_weight":!!python/tuple [1, 10],
-                        "subsample": !!python/tuple [0.8, 1.], 
-                        "colsample_bytree": !!python/tuple [0.8, 1]}    # dict of ranges for the hyperparameters evaluated by optuna
+
+    HyperParamsRange:   {"max_depth": [8, 18], 
+                        "learning_rate": [0.01, 0.1],
+                        "n_estimators": [300, 1500], 
+                        "min_child_weight":[1, 10],
+                        "subsample": [0.8, 1.], 
+                        "colsample_bytree": [0.8, 1],
+                        "n_jobs": [35, 40]}                      # dict of ranges for the hyperparameters evaluated by optuna
 
     model: "xgboost"        # accepted models: xgboost, automl
     do_opt: True
@@ -88,9 +90,10 @@ training:
     save_model: True
 
     beta_flat: False
+    beta_p_flat: False
 
 application:
-    model_loc: /Users/giogi/Desktop/Stage INFN/PID ITS/ML_output/RegressorModel_xgboost_betaflat_.pickle
+    model_loc: ../../..//ML_output/RegressorModel_xgboost_betaflat_.pickle
 
 plots:
     do_plots: True
@@ -105,10 +108,10 @@ plots:
                     "TanLamL4": [100, -10, 10], "TanLamL5": [100, -10, 10], "TanLamL6": [100, -10, 10], "tgL": [100, -10, 10],
                     "PattIDL0": [10, 0, 100], "PattIDL1": [10, 0, 100], "PattIDL2": [10, 0, 100], "PattIDL3": [10, 0, 100], 
                     "PattIDL4": [10, 0, 100], "PattIDL5": [10, 0, 100], "PattIDL6": [10, 0, 100], "meanPattID": [10, 0, 100],
-                    "L6_L0": [100, 0, 10], "p": [100, 0, 2]}     # dict (variable_to_plot, hist_settings) 
+                    "L6_L0": [100, 0, 10], "p": [200, 0, 2]}     # dict (variable_to_plot, hist_settings) 
     
     plot_x_scat:    ["p", "p", "p", "beta"]
     plot_y_scat:    ["dedx", "beta", "meanClsize", "meanClsize"]
-    plot_spec_scat: [["p", "#frac{dE}{dx}", 4000, 0, 1.2, 600, 0, 600], ["p", "#beta", 4000, 0, 4, 1000, 0, 1.1], ["p", "meanClsize", 4000, 0, 4, 10, 0, 10], ["#beta", "meanClsize", 10, 0, 1, 10, 0, 20]]  
+    plot_spec_scat: [["p", "#frac{dE}{dx}", 1500, 0, 1.5, 600, 0, 600], ["p", "#beta", 1500, 0, 1.5, 1000, 0, 1.1], ["p", "meanClsize", 1500, 0, 1.5, 10, 0, 10], ["#beta", "meanClsize", 10, 0, 1, 10, 0, 20]]  
     
     
