--- a/PID ITS - Giorgio Alberto/configs/config.yml
+++ b/PID ITS - Giorgio Alberto/configs/config.yml
@@ -50,6 +50,14 @@ data_prep:
     betamins: [0.2, 0.4, 0.6, 0.8]
     betamaxs: [0.4, 0.6, 0.8, 1.0]
 
+    # Beta p Flat
+    #____________________________________
+    #pmins: [0., 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4]
+    #pmaxs: [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5]
+
+    pmins: [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4]
+    pmaxs: [0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5]
+
 training:
 
     skip_training: False
@@ -90,7 +98,7 @@ training:
     save_model: True
 
     beta_flat: False
-    beta_p_flat: False
+    beta_p_flat: True
 
 application:
     model_loc: ../../..//ML_output/RegressorModel_xgboost_betaflat_.pickle
