--- a/PID ITS - Giorgio Alberto/configs/config_plots.yml
+++ b/PID ITS - Giorgio Alberto/configs/config_plots.yml
@@ -1,14 +1,12 @@
 inputs:
     dirname: null # leave null if not common for all input files
-    filenames: [/home/galucia/PID_ITS/ML_output/V0/no_options/e_score_hist.root,
-                /home/galucia/PID_ITS/ML_output/V0/no_options/K_score_hist.root,
-                /home/galucia/PID_ITS/ML_output/V0/no_options/p_score_hist.root,
-                /home/galucia/PID_ITS/ML_output/V0/no_options/pi_score_hist.root
+    filenames: [/home/galucia/PID_ITS/ML_output/V0/augm/Appl_e_score_hist.root,
+                /home/galucia/PID_ITS/ML_output/V0/augm/Appl_K_score_hist.root,
                 ]
-    objectnames: ['Test', 'Test', 'Test', 'Test'] # can be either histograms of graphs or a mix of them; they will be drawn in the current order
+    objectnames: ['scatter_plot', 'scatter_plot', 'scatter_plot', 'scatter_plot'] # can be either histograms of graphs or a mix of them; they will be drawn in the current order
 
 output: 
-    filename: /home/galucia/PID_ITS/ML_output/V0/beta_pflat/READY_score_hist # with path and w/o extension
+    filename: /home/galucia/PID_ITS/ML_output/V0/augm/PROVA_Appl_score_hist # with path and w/o extension
     objectnames: ['e', 'K', 'p', 'pi'] # new names for the created objects. Will be AUTOMATICALLY applied if the lenght of the list equals the lenght of the one in the input section
     extensions: [png, root] # possibilities: pdf, eps, png, root
 
@@ -27,7 +25,7 @@ options:
     palette: ['kBlue', 'kBlue', 'kBlue', 'kBlue']
     
     ratio: 
-        enable: false
+        enable: true
         uncertainties:
             enable: false
             corr: false
